<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.dhun.android"
            android:targetClass="dev.dhun.android.MainActivity">
            <extra
                android:name="dev.dhun.android.extra.SHORTCUT_ACTION"
                android:value="search" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="resume"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:shortcutShortLabel="@string/shortcut_resume"
        android:shortcutLongLabel="@string/shortcut_resume_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.dhun.android"
            android:targetClass="dev.dhun.android.MainActivity">
            <extra
                android:name="dev.dhun.android.extra.SHORTCUT_ACTION"
                android:value="resume" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="library"
        android:enabled="true"
        android:icon="@drawable/ic_notification"
        android:shortcutShortLabel="@string/shortcut_library"
        android:shortcutLongLabel="@string/shortcut_library_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="dev.dhun.android"
            android:targetClass="dev.dhun.android.MainActivity">
            <extra
                android:name="dev.dhun.android.extra.SHORTCUT_ACTION"
                android:value="library" />
        </intent>
    </shortcut>
</shortcuts>
